--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <h3 class="banner-subtitle">
               DSC JIIT - 128 brings you the most famous event for beginners to get started with Open Source
             </h3>
-            <a class="banner-btn" ref="#">Explore</i></a>
+            <a class="banner-btn" href="/about.html">Explore</i></a>
           </div>
         </section>
       </header>
