Add Events scroll to Statistics section

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </header>
 
 
-      <!-- Details  -->
+      <!-- Details / Statistics  -->
 
       <section class="page numbers" id="events">
 
