--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
             <li><a href="./index.html">Home</a></li>
             <li><a href="./about.html">About Us</a></li>
             <li><a href="#">Resources</a></li>
-            <li><a href="#">Events</a></li>
+            <li><a href="#">Statistics</a></li>
             <li><a href="./faq.html">Faq</a></li>
 
           </ul>
