--- a/faq.html
+++ b/faq.html
@@ -16,7 +16,7 @@
 
         <nav>
           <div id="nav-top">
-            <h3>Hacktober Fest</h3>
+            <a class="logo" href="./index.html"><h3>Hacktober Fest</h3></a>
             <div id="menu-btn">
               <div class="bar1"></div>
               <div class="bar2"></div>
