Added the hover effect to the subheadings of the FAQ page

--- a/faq.html
+++ b/faq.html
@@ -46,7 +46,7 @@
         </section>
       </header>
     <section class="faqs">
-    <h2>General<i class="fas fa-question"></i></h2>
+    <div class="faq-sub-heading"><h2>General<i class="fas fa-question"></i></h2></div>
     <div class="ques">Q.What is Hacktoberfest?<i class="fas fa-plus"></i></div>
     <div class="ans">Hacktoberfest is a month-long celebration of open source software in partnership with Github .</div>
     <div class="ques">Q.What if my pull requests aren’t accepted?<i class="fas fa-plus"></i></div>
@@ -58,7 +58,7 @@
     <div class="ques">What is considered a valid pull request?<i class="fas fa-plus"></i></div>
     <div class="ans">Review our quality standards and spam reduction tips on the Resources page for more information</div>
 
-    <h2>Rules<i class="fas fa-hand-sparkles"></i></h2>
+    <div class="faq-sub-heading"><h2>Rules<i class="fas fa-hand-sparkles"></i></h2></div>
     <div class="ques">Q :Do pull requests made on my own repositories count?<i class="fas fa-plus"></i></div>
     <div class="ans">Yes, but we strongly encourage you to make quality contributions to other repositories.</div>
     <div class="ques">Q : Do contributions made outside of GitHub count?<i class="fas fa-plus"></i></div>
@@ -70,7 +70,7 @@
     <div class="ques">Q : Can I make pull requests to issues/repositories that are not listed on the homepage?<i class="fas fa-plus"></i></div>
     <div class="ans">Yes! Any public GitHub repository is good for Hacktoberfest.</div>
 
-    <h2>Shipping<i class="fas fa-shipping-fast"></i></h2>
+    <div class="faq-sub-heading"><h2>Shipping<i class="fas fa-shipping-fast"></i></h2></div>
     <div class="ques">Q : I didn’t receive my Hacktoberfest 2019 T-shirt/swag.<i class="fas fa-plus"></i></div>
     <div class="ans">We are no longer printing 2019 T-shirts. If you did not receive your T-shirt, this means we tried to deliver multiple times unsuccessfully. We are working hard on improving the shipping process this year so that everyone receives their T-shirts.
     Thank you for your understanding.</div>
