Linked the Hacktober fest header logo to home

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
         <nav>
           <div id="nav-top">
-            <h3>Hacktober Fest</h3>
+            <a href="#" style="text-decoration:none"><h3>Hacktober Fest</h3></a> 
+            
             <div id="menu-btn">
               <div class="bar1"></div>
               <div class="bar2"></div>
