footer added to faq page

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         </div>
 
         <center>
-          <div class "footer">
+          <div class = "footer">
                   <h4 class="contact-text">CONTACT US</h4>
                   <h4 class="contact-text">© 2020 DigitalOcean, LLC. All rights reserved</h4>
                   <div class="contact">
