added countdown in the home page

--- a/index.html
+++ b/index.html
@@ -142,6 +142,33 @@
             </div>
         </div>
 
+        <br/>
+        <br/>
+        <center>
+        <div style="background-color:#202040;color:#b030b0;">
+          <br/>
+          <br/>
+          <div id="countdown">
+          <h1 id="headline">Countdown to Completion of the Hacktoberfest</h1>
+          <div>
+            <ul>
+              <li class="li-countdown"><span id="days"></span>days</li>
+              <li class="li-countdown"><span id="hours"></span>Hours</li>
+              <li class="li-countdown"><span id="minutes"></span>Minutes</li>
+              <li class="li-countdown"><span id="seconds"></span>Seconds</li>
+            </ul>
+          </div>
+          </div>
+          <div id="finishmessage" style="display:none;">
+            <br/>
+            <h1>It's a wrap!</h1>
+            <h2>Thank you for your participation</h2>
+            <br/>
+            <br/>
+            </div>
+        </div>
+        </center>
+
         <center>
           <div class "footer">
                   <h4 class="contact-text">CONTACT US</h4>
