added a countdown of remaining time for completing Hacktoberfest

--- a/index.html
+++ b/index.html
@@ -142,8 +142,42 @@
             </div>
         </div>
 
+      <!-- Countdown  -->
+      <div class="countdown">
+        <h1>Remaining time to complete Hacktoberfest.</h1>
+        <ul id="countdown">
+          <li>
+            <div class="center">
+              <span class="days">00</span>
+              <p class="timeRefDays">days</p>
+            </div>
+          </li>
+          <li>
+            <div class="center">
+
+              <span class="hours">00</span>
+              <p class="timeRefHours">hours</p>
+            </div>
+          </li>
+          <li>
+            <div class="center">
+
+              <span class="minutes">00</span>
+              <p class="timeRefMinutes">minutes</p>
+            </div>
+          </li>
+          <li>
+            <div class="center">
+
+              <span class="seconds">00</span>
+              <p class="timeRefSeconds">seconds</p>
+            </div>  
+          </li>
+        </ul>
+      </div>
+
         <center>
-          <div class "footer">
+          <div class="footer">
                   <h4 class="contact-text">CONTACT US</h4>
                   <h4 class="contact-text">© 2020 DigitalOcean, LLC. All rights reserved</h4>
                   <div class="contact">
@@ -156,7 +190,10 @@
                 </div>
               </center>
           
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+        integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+        crossorigin="anonymous"></script>
       <script src="index.js"></script>
 </body>
 </html>
