--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
       </style>
 </head>
 <body>
-    <header id="header">
+    <header id="header2">
 
         <!-- Navbar -->
 
@@ -95,7 +95,7 @@
 
           </ul>
         </nav>
-        <div class="test"></div>
+        
         <div class="about">
           About Us
         </div>
@@ -116,6 +116,7 @@
 
           
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-      <script src="index.js"></script>
+      <script src="index.js"></script> 
 </body>
 </html>
+
