--- a/faq.html
+++ b/faq.html
@@ -27,7 +27,7 @@
           <ul id="links">
             <li><a href="./index.html">Home</a></li>
             <li><a href="./about.html">About Us</a></li>
-            <li><a href="#">Resources</a></li>
+            <li><a href="index.html#resource">Resources</a></li>
             <li><a href="#">Events</a></li>
             <li><a href="./faq.html">Faq</a></li>
 
