--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li><a href="./index.html">Home</a></li>
             <li><a href="./about.html">About Us</a></li>
             <li><a href="#">Resources</a></li>
-            <li><a href="#">Events</a></li>
+            <li><a href="#number-stats">Events</a></li>
             <li><a href="./faq.html">Faq</a></li>
 
           </ul>
@@ -50,7 +50,7 @@
 
       <!-- Details  -->
 
-      <section class="numbers">
+      <section class="numbers" id="number-stats">
 
         <div class="numbers-center">
 
