added smooth scroll when click on resoureces tab #7 issue

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <ul id="links">
             <li><a href="./index.html">Home</a></li>
             <li><a href="./about.html">About Us</a></li>
-            <li><a href="#">Resources</a></li>
+            <li><a href="#resources">Resources</a></li>
             <li><a href="#number-stats">Events</a></li>
             <li><a href="./faq.html">Faq</a></li>
 
@@ -94,7 +94,7 @@
 
         </div>
        </section>
-        <div class="container">
+        <div class="container" id="resources">
             <div class="card">
                 <div class="card-image">
                     <i class="fab fa-html5"></i>
