--- a/faq.html
+++ b/faq.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./css/faq.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="faq.css">
+    
     <title>FAQ's</title>
 </head>
 <body>
@@ -81,16 +81,16 @@
               <h4 class="contact-text">CONTACT US</h4>
               <h4 class="contact-text">© 2020 DigitalOcean, LLC. All rights reserved</h4>
               <div class="contact">
-                <a href="https://www.facebook.com/dscjiitnoida/"><img src="facebook.svg" class="contact-img"></a>
-                <a href="https://github.com/dsc-jiit-128"></a><img src="Github.svg" class="contact-img"></a>
-                <a href="mailto:dscjiit128@gmail.com"></a><img src="google-plus.svg" class="contact-img"></a>
-                <a href="https://www.instagram.com/dscj128/?hl=en"></a><img src="Instagram.svg"class="contact-img"></a>
-                <a href="https://twitter.com/Dsc128"><img src="Twitter.svg" class="contact-img"></a>
+                <a href="https://www.facebook.com/dscjiitnoida/"><img src="./img/facebook.svg" class="contact-img"></a>
+                <a href="https://github.com/dsc-jiit-128"></a><img src="./img/Github.svg" class="contact-img"></a>
+                <a href="mailto:dscjiit128@gmail.com"></a><img src="./img/google-plus.svg" class="contact-img"></a>
+                <a href="https://www.instagram.com/dscj128/?hl=en"></a><img src="./img/Instagram.svg"class="contact-img"></a>
+                <a href="https://twitter.com/Dsc128"><img src="./img/Twitter.svg" class="contact-img"></a>
               </div>
       </div>
     </center>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="faq.js"></script>
-    <script src="index.js"></script>
+    <script src="./js/faq.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
