file structure modified

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
       <ul id="links">
         <li><a href="./index.html">Home</a></li>
-        <li><a href="./about.html">About Us</a></li>
+        <li><a href="./html/about.html">About Us</a></li>
         <li><a href="#">Resources</a></li>
         <li><a href="#" data-page="events">Events</a></li>
-        <li><a href="./faq.html">Faq</a></li>
+        <li><a href="./html/faq.html">Faq</a></li>
 
       </ul>
     </nav>
