--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <nav>
       <div id="nav-top">
         <a href="#" style="text-decoration:none">
-          <h3>Hacktober Fest</h3>
+          <!-- <h3>Hacktober Fest</h3> -->
+          <img src="/hflogo.png" alt="Hacktober Fest logo" width="50px">
         </a>
 
         <div id="menu-btn">
