--- a/about.html
+++ b/about.html
@@ -34,7 +34,10 @@
 
         <nav class="sticky">
           <div id="nav-top">
-            <a href="./index.html" style="text-decoration:none"><h3>Hacktober Fest</h3></a>
+            <a href="./index.html" style="text-decoration:none">
+            <!-- <h3>Hacktober Fest</h3> -->
+            <img src="/hflogo.png" alt="Hacktober Fest logo" width="50px">
+            </a>
             <div id="menu-btn">
               <div class="bar1"></div>
               <div class="bar2"></div>
