--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
   <title>Hacktober Fest</title>
 </head>
 
 <body>
-  
+  <header id="header">
 
     <!-- Navbar -->
 
@@ -31,19 +31,17 @@
 
       <ul id="links">
         <li><a href="./index.html">Home</a></li>
-        <li><a href="./html/about.html">About Us</a></li>
+        <li><a href="./about.html">About Us</a></li>
         <li><a href="#">Resources</a></li>
         <li><a href="#" data-page="events">Events</a></li>
-        <li><a href="./html/faq.html">Faq</a></li>
+        <li><a href="./faq.html">Faq</a></li>
 
       </ul>
     </nav>
 
-    <header id="header">
     <!-- Home Page banner -->
 
     <section id="banner">
-      <img class="favicon" src="./img/hactoberfest_favicon-removebg-preview.png"/>
       <div id="banner-box">
         <div>
           <br />
@@ -71,7 +69,7 @@
         <h3 class="banner-subtitle">
           DSC JIIT - 128 brings you the most famous event for beginners to get started with Open Source
         </h3>
-        <a class="banner-btn" href="index.html">Explore</i></a>
+        <a class="banner-btn" href="/about.html">Explore</i></a>
       </div>
     </section>
   </header>
@@ -185,16 +183,16 @@
     <h4 class="contact-text">CONTACT US</h4>
     <h4 class="contact-text">© 2020 DigitalOcean, LLC. All rights reserved</h4>
     <div class="contact">
-      <a href="https://www.facebook.com/dscjiitnoida/"><img src="./img/Facebook.svg" class="contact-img"></a>
-      <a href="https://github.com/dsc-jiit-128"></a><img src="./img/Github.svg" class="contact-img"></a>
-      <a href="mailto:dscjiit128@gmail.com"></a><img src="./img/google-plus.svg" class="contact-img"></a>
-      <a href="https://www.instagram.com/dscj128/?hl=en"></a><img src="./img/instagram.svg" class="contact-img"></a>
-      <a href="https://twitter.com/Dsc128"><img src="./img/Twitter.svg" class="contact-img"></a>
+      <a href="https://www.facebook.com/dscjiitnoida/"><img src="Facebook.svg" class="contact-img"></a>
+      <a href="https://github.com/dsc-jiit-128"></a><img src="Github.svg" class="contact-img"></a>
+      <a href="mailto:dscjiit128@gmail.com"></a><img src="google-plus.svg" class="contact-img"></a>
+      <a href="https://www.instagram.com/dscj128/?hl=en"></a><img src="instagram.svg" class="contact-img"></a>
+      <a href="https://twitter.com/Dsc128"><img src="Twitter.svg" class="contact-img"></a>
     </div>
   </footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="./js/index.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
