--- a/faq.html
+++ b/faq.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" type="text/css">
+    <script type="text/javascript" src="bootstrap/js/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
@@ -76,21 +79,41 @@
     Thank you for your understanding.</div>
     </section>
     <!--Footer-->
-    <center>
-      <div class = "footer">
-              <h4 class="contact-text">CONTACT US</h4>
-              <h4 class="contact-text">© 2020 DigitalOcean, LLC. All rights reserved</h4>
-              <div class="contact">
-                <a href="https://www.facebook.com/dscjiitnoida/"><img src="facebook.svg" class="contact-img"></a>
-                <a href="https://github.com/dsc-jiit-128"></a><img src="Github.svg" class="contact-img"></a>
-                <a href="mailto:dscjiit128@gmail.com"></a><img src="google-plus.svg" class="contact-img"></a>
-                <a href="https://www.instagram.com/dscj128/?hl=en"></a><img src="Instagram.svg"class="contact-img"></a>
-                <a href="https://twitter.com/Dsc128"><img src="Twitter.svg" class="contact-img"></a>
+    <footer>
+      <div class="containers">
+          <div class="row">
+              <div class="col-md-4 col-xs-6">
+              <div class="column">
+                <h3>Contact Us</h3>
+                  <p>CONTACT No.(+91)9000990009</p>
               </div>
+              </div>
+             <div class="col-md-4 col-xs-6">
+              <div class="column">
+                <div class="contact">
+                  <center>
+                  <a href="https://www.facebook.com/dscjiitnoida/"><img src="Facebook.svg" class="contact-img"></a>
+                  <a href="https://github.com/dsc-jiit-128"></a><img src="Github.svg" class="contact-img"></a>
+                  <a href="mailto:dscjiit128@gmail.com"></a><img src="google-plus.svg" class="contact-img"></a>
+                  <a href="https://www.instagram.com/dscj128/?hl=en"></a><img src="instagram.svg" class="contact-img"></a>
+                  <a href="https://twitter.com/Dsc128"><img src="Twitter.svg" class="contact-img"></a>
+                </center>
+                </div>
+              </div>
+             </div>
+              <div class="col-md-4 col-md-6">
+                <center>
+              <div class="column">
+                <h3>Information</h3>
+                  <p><a href="#"><span style="color:white">About Us</span></a></p>
+              </div>
+            </center>
+          </div>
+          <div class="col-md-12 col-md-12">
+            <center><p>Copyright © 2020 DigitalOcean, LLC. All rights reserved </p></center>
+          </div>
+          </div>
       </div>
-    </center>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="faq.js"></script>
-    <script src="index.js"></script>
+    </footer>
 </body>
 </html>
