Fix footer for issue #74

--- a/faq.html
+++ b/faq.html
@@ -76,19 +76,17 @@
     Thank you for your understanding.</div>
     </section>
     <!--Footer-->
-    <center>
-      <div class = "footer">
-              <h4 class="contact-text">CONTACT US</h4>
-              <h4 class="contact-text">© 2020 DigitalOcean, LLC. All rights reserved</h4>
-              <div class="contact">
-                <a href="https://www.facebook.com/dscjiitnoida/"><img src="facebook.svg" class="contact-img"></a>
-                <a href="https://github.com/dsc-jiit-128"></a><img src="Github.svg" class="contact-img"></a>
-                <a href="mailto:dscjiit128@gmail.com"></a><img src="google-plus.svg" class="contact-img"></a>
-                <a href="https://www.instagram.com/dscj128/?hl=en"></a><img src="Instagram.svg"class="contact-img"></a>
-                <a href="https://twitter.com/Dsc128"><img src="Twitter.svg" class="contact-img"></a>
-              </div>
+    <footer>
+      <h4 class="contact-text">CONTACT US</h4>
+      <h4 class="contact-text">© 2020 DigitalOcean, LLC. All rights reserved</h4>
+      <div class="contact">
+        <a href="https://www.facebook.com/dscjiitnoida/"><img src="facebook.svg" class="contact-img"></a>
+        <a href="https://github.com/dsc-jiit-128"><img src="Github.svg" class="contact-img"></a>
+        <a href="mailto:dscjiit128@gmail.com"><img src="google-plus.svg" class="contact-img"></a>
+        <a href="https://www.instagram.com/dscj128/?hl=en"><img src="Instagram.svg" class="contact-img"></a>
+        <a href="https://twitter.com/Dsc128"><img src="Twitter.svg" class="contact-img"></a>
       </div>
-    </center>
+    </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="faq.js"></script>
     <script src="index.js"></script>
