Made the contact us section in about us section more visible

--- a/about.html
+++ b/about.html
@@ -74,16 +74,17 @@
 
       <center>
           <div class = "footer">
-                  <h4 class="contact-text">CONTACT US</h4>
-                  <h4 class="contact-text">© 2020 DigitalOcean, LLC. All rights reserved</h4>
-                  <div class="contact">
-
-                    <a href="https://www.facebook.com/dscjiitnoida/"><img src="Facebook.svg" class="contact-img"></a>
-                    <a href="https://github.com/dsc-jiit-128"><img src="Github.svg" class="contact-img"></a>
-                    <a href="mailto:dscjiit128@gmail.com"><img src="google-plus.svg" class="contact-img"></a>
-                    <a href="https://www.instagram.com/dscj128/"><img src="instagram.svg"class="contact-img"></a>
-                    <a href="https://twitter.com/Dsc128"><img src="Twitter.svg" class="contact-img"></a>
-                  </div>
+            <div class="border">
+              <h4 id="contact-text" class="contact-text1">CONTACT US</h4>
+              <h4 class="contact-text1">© 2020 DigitalOcean, LLC. All rights reserved</h4>
+              <div class="contact">
+                <a href="https://www.facebook.com/dscjiitnoida/"><img src="Facebook.svg" class="contact-img1"></a>
+                <a href="https://github.com/dsc-jiit-128"><img src="Github.svg" class="contact-img1"></a>
+                <a href="mailto:dscjiit128@gmail.com"><img src="google-plus.svg" class="contact-img1"></a>
+                <a href="https://www.instagram.com/dscj128/"><img src="instagram.svg"class="contact-img1"></a>
+                <a href="https://twitter.com/Dsc128"><img src="Twitter.svg" class="contact-img1"></a>
+              </div>
+            </div>
           </div>
         </center>
 
