--- a/index.html
+++ b/index.html
@@ -179,6 +179,9 @@
       </div>
     </div>
   </div>
+
+<!--#################Contact Us###############################-->
+
   <footer>
     <h4 class="contact-text">CONTACT US</h4>
     <h4 class="contact-text">© 2020 DigitalOcean, LLC. All rights reserved</h4>
