Modified files and added a new svg file

--- a/faq.html
+++ b/faq.html
@@ -1,96 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="faq.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+      integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./faq.css" />
     <title>FAQ's</title>
-</head>
-<body>
+  </head>
+  <body>
     <header id="header">
+      <!-- Navbar -->
 
-        <!-- Navbar -->
-
-        <nav>
-          <div id="nav-top">
-            <a href="./index.html" style="text-decoration:none"><h3>Hacktober Fest</h3></a>
-            <div id="menu-btn">
-              <div class="bar1"></div>
-              <div class="bar2"></div>
-              <div class="bar3"></div>
-            </div>
+      <nav>
+        <div id="nav-top">
+          <a href="./index.html" style="text-decoration:none"
+            ><h3>Hacktober Fest</h3></a
+          >
+          <div id="menu-btn">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
           </div>
+        </div>
 
-          <ul id="links">
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./about.html">About Us</a></li>
-            <li><a href="#">Resources</a></li>
-            <li><a href="#">Events</a></li>
-            <li><a href="./faq.html">Faq</a></li>
+        <ul id="links">
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./about.html">About Us</a></li>
+          <li><a href="./index.html#resources">Resources</a></li>
+          <li><a href="#">Events</a></li>
+          <li><a href="./faq.html">Faq</a></li>
+        </ul>
+      </nav>
 
-          </ul>
-        </nav>
+      <!-- Home Page banner -->
 
-        <!-- Home Page banner -->
-
-        <section id="banner">
-          <div id="banner-box">
-            <h1 id="banner-title">Frequently Asked Questions !!<i class="far fa-comment"></i></h1>
-            <div class="banner-underline"></div>
-            <h3 class="banner-subtitle"> Let's Get You Answered
-                <br>Learn more about Hacktoberfest and how to get involved.</h3>
-          </div>
-        </section>
-      </header>
+      <section id="banner">
+        <div id="banner-box">
+          <h1 id="banner-title">
+            Frequently Asked Questions !!<i class="far fa-comment"></i>
+          </h1>
+          <div class="banner-underline"></div>
+          <h3 class="banner-subtitle">
+            Let's Get You Answered <br />Learn more about Hacktoberfest and how
+            to get involved.
+          </h3>
+        </div>
+      </section>
+    </header>
     <section class="faqs">
-    <h2>General<i class="fas fa-question"></i></h2>
-    <div class="ques">Q.What is Hacktoberfest?<i class="fas fa-plus"></i></div>
-    <div class="ans">Hacktoberfest is a month-long celebration of open source software in partnership with Github .</div>
-    <div class="ques">Q.What if my pull requests aren’t accepted?<i class="fas fa-plus"></i></div>
-    <div class="ans">Even if your pull requests aren’t accepted, as long as you open at least 4 pull requests, you’ll earn the shirt.</div>
-    <div class="ques">Q. What will you get if you participate in it ?<i class="fas fa-plus"></i></div>
-    <div class="ans">A limited edition T-shirt for FREE!</div>
-    <div class="ques">Q.What if I don’t make at least four pull requests by midnight October 31?<i class="fas fa-plus"></i></div>
-    <div class="ans">As long as you registered for Hacktoberfest, you’ll still get some free stickers in the mail. So it’s still worth registering, even if you’re too busy to participate.</div>
-    <div class="ques">What is considered a valid pull request?<i class="fas fa-plus"></i></div>
-    <div class="ans">Review our quality standards and spam reduction tips on the Resources page for more information</div>
+      <h2>General<i class="fas fa-question"></i></h2>
+      <div class="ques">
+        Q.What is Hacktoberfest?<i class="fas fa-plus"></i>
+      </div>
+      <div class="ans">
+        Hacktoberfest is a month-long celebration of open source software in
+        partnership with Github .
+      </div>
+      <div class="ques">
+        Q.What if my pull requests aren’t accepted?<i class="fas fa-plus"></i>
+      </div>
+      <div class="ans">
+        Even if your pull requests aren’t accepted, as long as you open at least
+        4 pull requests, you’ll earn the shirt.
+      </div>
+      <div class="ques">
+        Q. What will you get if you participate in it ?<i
+          class="fas fa-plus"
+        ></i>
+      </div>
+      <div class="ans">A limited edition T-shirt for FREE!</div>
+      <div class="ques">
+        Q.What if I don’t make at least four pull requests by midnight October
+        31?<i class="fas fa-plus"></i>
+      </div>
+      <div class="ans">
+        As long as you registered for Hacktoberfest, you’ll still get some free
+        stickers in the mail. So it’s still worth registering, even if you’re
+        too busy to participate.
+      </div>
+      <div class="ques">
+        What is considered a valid pull request?<i class="fas fa-plus"></i>
+      </div>
+      <div class="ans">
+        Review our quality standards and spam reduction tips on the Resources
+        page for more information
+      </div>
 
-    <h2>Rules<i class="fas fa-hand-sparkles"></i></h2>
-    <div class="ques">Q :Do pull requests made on my own repositories count?<i class="fas fa-plus"></i></div>
-    <div class="ans">Yes, but we strongly encourage you to make quality contributions to other repositories.</div>
-    <div class="ques">Q : Do contributions made outside of GitHub count?<i class="fas fa-plus"></i></div>
-    <div class="ans">No, pull requests must be made on the GitHub platform.</div>
-    <div class="ques">Q : Do issues have to be tagged #Hacktoberfest to count?<i class="fas fa-plus"></i></div>
-    <div class="ans">No, any pull request made on a public repository counts, whether it’s attached to a hacktoberfest issue or not.</div>
-    <div class="ques">Q : Do issues/commits count?<i class="fas fa-plus"></i></div>
-    <div class="ans">No, only pull requests count.</div>
-    <div class="ques">Q : Can I make pull requests to issues/repositories that are not listed on the homepage?<i class="fas fa-plus"></i></div>
-    <div class="ans">Yes! Any public GitHub repository is good for Hacktoberfest.</div>
+      <h2>Rules<i class="fas fa-hand-sparkles"></i></h2>
+      <div class="ques">
+        Q :Do pull requests made on my own repositories count?<i
+          class="fas fa-plus"
+        ></i>
+      </div>
+      <div class="ans">
+        Yes, but we strongly encourage you to make quality contributions to
+        other repositories.
+      </div>
+      <div class="ques">
+        Q : Do contributions made outside of GitHub count?<i
+          class="fas fa-plus"
+        ></i>
+      </div>
+      <div class="ans">
+        No, pull requests must be made on the GitHub platform.
+      </div>
+      <div class="ques">
+        Q : Do issues have to be tagged #Hacktoberfest to count?<i
+          class="fas fa-plus"
+        ></i>
+      </div>
+      <div class="ans">
+        No, any pull request made on a public repository counts, whether it’s
+        attached to a hacktoberfest issue or not.
+      </div>
+      <div class="ques">
+        Q : Do issues/commits count?<i class="fas fa-plus"></i>
+      </div>
+      <div class="ans">No, only pull requests count.</div>
+      <div class="ques">
+        Q : Can I make pull requests to issues/repositories that are not listed
+        on the homepage?<i class="fas fa-plus"></i>
+      </div>
+      <div class="ans">
+        Yes! Any public GitHub repository is good for Hacktoberfest.
+      </div>
 
-    <h2>Shipping<i class="fas fa-shipping-fast"></i></h2>
-    <div class="ques">Q : I didn’t receive my Hacktoberfest 2019 T-shirt/swag.<i class="fas fa-plus"></i></div>
-    <div class="ans">We are no longer printing 2019 T-shirts. If you did not receive your T-shirt, this means we tried to deliver multiple times unsuccessfully. We are working hard on improving the shipping process this year so that everyone receives their T-shirts.
-    Thank you for your understanding.</div>
+      <h2>Shipping<i class="fas fa-shipping-fast"></i></h2>
+      <div class="ques">
+        Q : I didn’t receive my Hacktoberfest 2019 T-shirt/swag.<i
+          class="fas fa-plus"
+        ></i>
+      </div>
+      <div class="ans">
+        We are no longer printing 2019 T-shirts. If you did not receive your
+        T-shirt, this means we tried to deliver multiple times unsuccessfully.
+        We are working hard on improving the shipping process this year so that
+        everyone receives their T-shirts. Thank you for your understanding.
+      </div>
     </section>
     <!--Footer-->
     <center>
-      <div class = "footer">
-              <h4 class="contact-text">CONTACT US</h4>
-              <h4 class="contact-text">© 2020 DigitalOcean, LLC. All rights reserved</h4>
-              <div class="contact">
-                <a href="https://www.facebook.com/dscjiitnoida/"><img src="facebook.svg" class="contact-img"></a>
-                <a href="https://github.com/dsc-jiit-128"></a><img src="Github.svg" class="contact-img"></a>
-                <a href="mailto:dscjiit128@gmail.com"></a><img src="google-plus.svg" class="contact-img"></a>
-                <a href="https://www.instagram.com/dscj128/?hl=en"></a><img src="Instagram.svg"class="contact-img"></a>
-                <a href="https://twitter.com/Dsc128"><img src="Twitter.svg" class="contact-img"></a>
-              </div>
-      </div>
+      <footer>
+        <h4 class="contact-text">CONTACT US</h4>
+        <h4 class="contact-text">
+          © 2020 DigitalOcean, LLC. All rights reserved
+        </h4>
+        <div class="contact">
+          <a href="https://www.facebook.com/dscjiitnoida/"
+            ><img src="Facebook.svg" class="contact-img"
+          /></a>
+          <a href="https://github.com/dsc-jiit-128"
+            ><img src="github-logo.svg" class="contact-img"
+          /></a>
+          <a href="mailto:dscjiit128@gmail.com"
+            ><img src="google-plus.svg" class="contact-img"
+          /></a>
+          <a href="https://www.instagram.com/dscj128/"
+            ><img src="instagram.svg" class="contact-img"
+          /></a>
+          <a href="https://twitter.com/Dsc128"
+            ><img src="Twitter.svg" class="contact-img"
+          /></a>
+        </div>
+      </footer>
     </center>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="faq.js"></script>
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
