--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <ul id="links">
         <li><a href="./index.html">Home</a></li>
         <li><a href="./about.html">About Us</a></li>
-        <li><a href="#">Resources</a></li>
+        <li><a href="#resources">Resources</a></li>
         <li><a href="#" data-page="events">Events</a></li>
         <li><a href="./faq.html">Faq</a></li>
 
@@ -69,7 +69,7 @@
         <h3 class="banner-subtitle">
           DSC JIIT - 128 brings you the most famous event for beginners to get started with Open Source
         </h3>
-        <a class="banner-btn" href="/about.html">Explore</i></a>
+        <a class="banner-btn" href="./about.html"><i>Explore</i></a>
       </div>
     </section>
   </header>
@@ -130,7 +130,7 @@
             <div class="bar3"></div>
           </div>
   </section>
-  <div class="container">
+  <div class="container" id="resources">
     <div class="card">
       <div class="card-image">
         <i class="fab fa-html5"></i>
@@ -181,13 +181,25 @@
   </div>
   <footer>
     <h4 class="contact-text">CONTACT US</h4>
-    <h4 class="contact-text">© 2020 DigitalOcean, LLC. All rights reserved</h4>
+    <h4 class="contact-text">
+      © 2020 DigitalOcean, LLC. All rights reserved
+    </h4>
     <div class="contact">
-      <a href="https://www.facebook.com/dscjiitnoida/"><img src="Facebook.svg" class="contact-img"></a>
-      <a href="https://github.com/dsc-jiit-128"></a><img src="Github.svg" class="contact-img"></a>
-      <a href="mailto:dscjiit128@gmail.com"></a><img src="google-plus.svg" class="contact-img"></a>
-      <a href="https://www.instagram.com/dscj128/?hl=en"></a><img src="instagram.svg" class="contact-img"></a>
-      <a href="https://twitter.com/Dsc128"><img src="Twitter.svg" class="contact-img"></a>
+      <a href="https://www.facebook.com/dscjiitnoida/"
+        ><img src="Facebook.svg" class="contact-img"
+      /></a>
+      <a href="https://github.com/dsc-jiit-128"
+        ><img src="github-logo.svg" class="contact-img"
+      /></a>
+      <a href="mailto:dscjiit128@gmail.com"
+        ><img src="google-plus.svg" class="contact-img"
+      /></a>
+      <a href="https://www.instagram.com/dscj128/"
+        ><img src="instagram.svg" class="contact-img"
+      /></a>
+      <a href="https://twitter.com/Dsc128"
+        ><img src="Twitter.svg" class="contact-img"
+      /></a>
     </div>
   </footer>
 
